[package]
name = "font_7seg"
version = "0.0.4"
edition = "2021"
authors = ["mitoneko"]
description = "7セグメントLED風数字フォント"
license = "MIT OR Apache-2.0"
keywords = ["font", "embedded-graphics", "embedded", "graphics"] 
categories = ["embedded", "graphics"]
readme = "README.md"
repository = "https://github.com/mitoneko/font_7seg.git"

[dependencies]
embedded-graphics = "0.7.1"

[dependencies.num-traits]
version = "0.2"
default-features = false
